<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menuAllDocuments"
            android:icon="@drawable/ic_menu_all_documents"
            android:title="@string/all_documents" />
        <item
            android:id="@+id/menuBookMark"
            android:icon="@drawable/ic_nav_stared"
            android:title="@string/stared" />
        <item
            android:id="@+id/menuTools"
            android:icon="@drawable/ic_menu_tools"
            android:title="@string/pdf_tools" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menuRate"
            android:icon="@drawable/ic_nav_stared"
            android:title="@string/rate_this_app" />
        <item
            android:id="@+id/menuShare"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/share_this_app" />

        <item
            android:id="@+id/menuAbout"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/about" />
        <item
            android:id="@+id/menuSettings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/settings" />
    </group>
</menu>
